# mode-watermarking-v2

./: .gitignore  CODEBASE_SUMMARY.md  LICENSE  README.md  VERIFICATION_REPORT.md  pyproject.toml  requirements.txt  run_ablation_phases.sh
analysis/: watermark_ablation.ipynb
deploy/: deploy.sh  docker-compose.yml
deploy/api/: Dockerfile
deploy/k8s/: api-deployment.yaml  configmap.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secrets.yaml  storage.yaml  worker-deployment.yaml
deploy/worker/: Dockerfile
docs/: SERVICE_ARCHITECTURE.md  WATERMARK_STRENGTH_OPTIMIZATION.md
mode-watermarking/: .gitignore  Dockerfile  GCP_DEPLOYMENT.md  README.md  deploy_gcp.sh  install.sh  pyproject.toml  requirements.txt  setup.py  setup.sh
mode-watermarking/configs/: diffusion_config.yaml  eval_config.yaml  model_architecture.yaml  train_config.yaml  watermark_config.yaml
mode-watermarking/data/coco/: prompts_test.txt  prompts_val.txt
mode-watermarking/mode_watermarking/: __init__.py  __main__.py
mode-watermarking/mode_watermarking/core/: __init__.py  detection.py  diffusion_mixin.py  embedding.py  image_processing.py
mode-watermarking/mode_watermarking/utils/: __init__.py  key_manager.py  utils.py
mode-watermarking/notebooks/: quick_start.ipynb
mode-watermarking/scripts/: download_coco.py  extract_coco_captions.py  generate_dataset.py  run_eval.sh  run_full_pipeline.sh  run_train.sh
mode-watermarking/src/: __init__.py
mode-watermarking/src/cli/: __init__.py  eval.py  generate.py  train.py
mode-watermarking/src/config/: __init__.py  config_loader.py  mode_config.py
mode-watermarking/src/data/: __init__.py  dataset.py  transforms.py
mode-watermarking/src/detection/: __init__.py  calibrate.py  correlate.py  recovery.py
mode-watermarking/src/evaluation/: __init__.py  eval.py  quality_metrics.py  visualize.py
mode-watermarking/src/models/: README.md  __init__.py  bayesian_detector.py  unet_detector.py
mode-watermarking/src/sd_integration/: __init__.py  biased_denoiser.py  sd_client.py  timestep_mapper.py
mode-watermarking/src/training/: __init__.py  loss.py  train.py  trainer.py
mode-watermarking/src/utils/: io.py  logger.py  metrics.py
mode-watermarking/src/watermark/: README.md  __init__.py  g_utils.py  gfield.py  key.py  mask_utils.py
mode-watermarking/tests/: README.md  example_usage.py  requirements_test.txt  run_evaluation.py  test_calibrate.py  test_correlate.py  test_embedding_evaluation.py  test_eval.py  test_quality_metrics.py  test_recovery.py
results_2/: calibration_098_exp.json  likelihood_params_exp.json  normalization_098_exp.json
scripts/: check_config.py  detect_bayesian_test.py  detect_latent_injection.py  detect_seed_bias.py  detect_watermark.py  evaluate_bayesian_detector.py  generate_ablation_configs.py  generate_ablation_configs_simple.py  generate_training_images.py  generation_ablation_configs.py  patch_manifest_with_mask.py  precompute_inverted_g_values.py  preprocess_latents.py  register_test_key.py  run_ablation_detection.py  run_ablation_g_export.py  run_watermark_ablation.py  test_api_research_equivalence.py  train_detector.py  train_g_likelihoods.py  train_unet.py  utils.py
service/: .env.example  Dockerfile  README.md  SERVICE_STRUCTURE.md  STARTUP_OPTIMIZATION.md  __init__.py  authority.py  detection.py  detection_worker.py  detector_artifacts.py  docker-compose.stub.yml  docker-compose.yml  evaluation.py
service/api/: __init__.py  authority.py  gpu_client.py  routes.py  schemas.py  storage.py
service/app/: __init__.py  artifact_paths.py  artifact_resolver.py  dependencies.py  exceptions.py  main.py  middleware.py  schemas.py
service/configs/: runtime.yaml
service/docker/: api.Dockerfile  gpu.Dockerfile
service/generation/: base.py  stable_diffusion.py
service/gpu/: Dockerfile  __init__.py  main.py  pipeline.py  requirements.txt  schemas.py
service/inference/: exceptions.py  schemas.py
service/infra/: __init__.py  db.py  logging.py  security.py
service/scripts/: deploy_gpu_gcp.sh  smoke_test.sh
service/worker/: Dockerfile  main.py  model_loader.py  routes.py
service_data/: watermark_keys.json
service_legacy/: ARCHITECTURE.md  Dockerfile  FOLDER_STRUCTURE.md  __init__.py  authority.py  detection.py  detector_artifacts.py  evaluation.py  evaluation_metrics.py
service_legacy/app/: dependencies.py  main.py  middleware.py  schemas.py
service_legacy/configs/: runtime.yaml
service_legacy/generation/: __init__.py
service_legacy/inference/: __init__.py  client.py
service_legacy/infra/: settings.py
service_legacy/worker/: __init__.py  schemas.py
src/: __init__.py
src/ablation/: __init__.py  dataset_generation.py  family_signature.py  gvalue_compute.py  latent_cache.py
src/algorithms/: __init__.py  g_field.py  masks.py  scheduling.py
src/core/: __init__.py  config.py  context.py  interfaces.py  key_utils.py  metadata_schema.py
src/detection/: __init__.py  api.py  (+10 more)
tests/: __init__.py
(+36 files in other folders)
