[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mode-watermarking"
version = "0.1.0"
description = "Advanced watermarking system for diffusion models"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mode Watermarking Team", email = "contact@modewatermarking.com"}
]
keywords = [
    "watermarking", "diffusion-models", "stable-diffusion", "ai-detection", 
    "image-generation", "latent-diffusion", "machine-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"

# Core dependencies for watermarking functionality
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pillow>=9.0.0",
    "opencv-python>=4.5.0",
    "tqdm>=4.64.0",
    "transformers>=4.21.0",
    "diffusers>=0.21.0",
    "accelerate>=0.20.0",
]

# Optional dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
gpu = [
    "torch[cuda]>=2.0.0",
    "torchvision[cuda]>=0.15.0",
]
advanced = [
    "lpips>=0.1.4",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/mode-watermarking/mode-watermarking"
Repository = "https://github.com/mode-watermarking/mode-watermarking.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["mode_watermarking*"]
exclude = ["tests*", "docs*", "scripts*"]